# NAI

./: deploy_nexus_os.sh  index.html  script.js  style.css
NAI/: .env  .scribe.toml  Dockerfile  Okay, We had brainstormed an option for .md  README.md  docker-compose.yml  nai_tui_app.py  nai_tui_styles.css  quick_run.py  requirements.txt  run_native_nai_workflow.py
NPTPAC/: npt_generator.py
NPTPAC/pac_cli/: pyproject.toml  requirements-dev.txt  requirements.txt  setup_venv.sh
NPTPAC/pac_cli/app/: __init__.py  main.py
NPTPAC/pac_cli/app/commands/: ner_cmds.py
NPTPAC/pac_cli/app/core/: __init__.py  agent_runner.py  llm_interface.py  ner_handler.py
NPTPAC/pac_cli/app/utils/: __init__.py  ui_utils.py
ODA/: REALITY_VALIDATION_PROTOCOL_ODA_v0.1.md  oda_core_operative_blueprint.py  oda_prime_ritual_design.md  oda_primed_state.json
Wbsite/: script.js  style.css
chimera-ansible-configs/: .ansible-lint  .pre-commit-config.yaml  (+4 more)
ekko/quantum_orchestrator_app2/: .pre-commit-config.yaml  Dockerfile  config.json  gather_replit_info.sh  instruction_schema.json  main.py  orchestrator_state.json  pyproject.toml  replit_scan.txt  run_api.py  scan_qo_app_code.sh  setup.py
ekko/quantum_orchestrator_app2/attached_assets/: Pasted-Directive-Delta-Quantum-Transcendence-Integration-Prompt-1-Cognitive-Fusion-Core-Multi-Agent-Sys-1745603383242.txt  Pasted-Directive-Omega-Quantum-Transcendence-Accelerated-13-Prompts-Prompt-1-Cognitive-Fusion-Core-Fo-1745603186325.txt  Pasted-Directive-Project-Completion-Final-Polish-Quantum-Orchestrator-v4-0-FINAL-ASSISTANT-Objective-1745612224625.txt  Pasted-Genesis-Directive-Omnitide-Automaton-Manifestation-Quantum-Orchestrator-v4-0-Objective-Generat-1745603488447.txt
ekko/quantum_orchestrator_app2/quantum_orchestrator/: __init__.py  config.json  instruction_schema.json
ekko/quantum_orchestrator_app2/quantum_orchestrator/ai_agents/: __init__.py  code_agent.py  core_team.py  meta_agent.py  optimization_agent.py  planning_agent.py  test_agent.py
ekko/quantum_orchestrator_app2/quantum_orchestrator/api/: __init__.py  api_server.py
ekko/quantum_orchestrator_app2/quantum_orchestrator/automation/: __init__.py  continuous_integration.py  input_sources.py  scheduler.py
ekko/quantum_orchestrator_app2/quantum_orchestrator/core/: __init__.py  agent.py  config.py  instruction_parser.py  self_verification.py  state_manager.py
ekko/quantum_orchestrator_app2/quantum_orchestrator/gui/: __init__.py
ekko/quantum_orchestrator_app2/quantum_orchestrator/gui/templates/: about.html  base.html  chat.html  console.html  dashboard.html  docs.html  error.html  index.html  services.html  team.html  tools.html
ekko/quantum_orchestrator_app2/quantum_orchestrator/gui/views/: __init__.py  main.py
ekko/quantum_orchestrator_app2/quantum_orchestrator/handlers/: __init__.py  execution.py  file_operations.py  git_operations.py  llm_operations.py  quality_operations.py
ekko/quantum_orchestrator_app2/quantum_orchestrator/handlers/custom/: __init__.py  chat_interface_handler.py  data_processing_handler.py  distributed_execution_handler.py  neural_network_handler.py  quantum_computing_handler.py  secure_api_handler.py  text_generation_handler.py
ekko/quantum_orchestrator_app2/quantum_orchestrator/services/: __init__.py  api_service.py  integration_service.py  llm_service.py  quality_service.py  watcher_service.py
ekko/quantum_orchestrator_app2/quantum_orchestrator/utils/: __init__.py  logging_utils.py  path_resolver.py  quantum_optimization.py  security.py  telemetry.py
(+110 files in other folders)
